--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
 
 html,
 button,
@@ -60,8 +59,38 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-
+body, html{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.wrapper{
+    width: 320px;
+    height: 550px;
+    background: url('../img/bg.jpg') bottom center;
+    background-size: cover;
+    
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    
+}
+.wrapper .header{
+    width: 100%;
+    height: auto;
+    background: url('../img/headerBG.jpg') top left;
+    background-size:cover;
+}
+.wrapper .header img{
+    width: 95%;
+    height: auto;
+    margin: 0 auto;
+    display: block;
+    -webkit-transform: translateY(5px);
+}
 
 
 
